2001-01-12  Alan Modra  <alan@linuxcare.com.au>

	* gas/i386/i386.exp (gas_64_check): Correct target string.
	Use gas_64_check rather than target string to decided whether
	x86_64 checks should run.

	* gas/i386/sse2.s: Add a label to cure objdump "no symbols" error.
	* gas/i386/ssemmx2.s: Likewise.
	* gas/i386/sse2.d: Update to suit.
	* gas/i386/ssemmx2.s: Likewise.

2001-01-11  Peter Targett <peter.targett@arccores.com>

	* gas/arc/alias.*: Removed.
	* gas/arc/branch.*: Likewise.
	* gas/arc/insn3.*: Likewise.
	* gas/arc/math.*: Likewise.
	* gas/arc/sshift.*: Likewise.
	* gas/arc/arc.exp: Simplified test process for base case
	instruction set by adding run_dump_test cases for all base
	instructions.
 	* gas/arc/adc.s, gas/arc/adc.d: New test cases and dump.
 	* gas/arc/add.s, gas/arc/add.d: Likewise.
 	* gas/arc/and.s, gas/arc/and.d: Likewise.
 	* gas/arc/asl.s, gas/arc/asl.d: Likewise.
 	* gas/arc/asr.s, gas/arc/asr.d: Likewise.
 	* gas/arc/b.s, gas/arc/b.d: Likewise.
 	* gas/arc/bic.s, gas/arc/bic.d: Likewise.
 	* gas/arc/bl.s, gas/arc/bl.d: Likewise.
 	* gas/arc/brk.s, gas/arc/brk.d: Likewise.
 	* gas/arc/extb.s, gas/arc/extb.d: Likewise.
 	* gas/arc/extw.s, gas/arc/extw.d: Likewise.
 	* gas/arc/flag.s, gas/arc/flag.d: Likewise.
 	* gas/arc/j.s, gas/arc/j.d: Likewise.
 	* gas/arc/jl.s, gas/arc/jl.d: Likewise.
 	* gas/arc/ld.s, gas/arc/ld.d: Likewise.
 	* gas/arc/ld2.s, gas/arc/ld2.d: Likewise.
 	* gas/arc/lp.s, gas/arc/lp.d: Likewise.
 	* gas/arc/lsr.s, gas/arc/lsr.d: Likewise.
 	* gas/arc/mov.s, gas/arc/mov.d: Likewise.
 	* gas/arc/nop.s, gas/arc/nop.d: Likewise.
 	* gas/arc/or.s, gas/arc/or.d: Likewise.
 	* gas/arc/rlc.s, gas/arc/rlc.d: Likewise.
 	* gas/arc/ror.s, gas/arc/ror.d: Likewise.
 	* gas/arc/rrc.s, gas/arc/rrc.d: Likewise.
 	* gas/arc/sbc.s, gas/arc/sbc.d: Likewise.
 	* gas/arc/sexb.s, gas/arc/sexb.d: Likewise.
 	* gas/arc/sexw.s, gas/arc/sexw.d: Likewise.
 	* gas/arc/sleep.s, gas/arc/sleep.d: Likewise.
 	* gas/arc/add.s, gas/arc/add.d: Likewise.